<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/icehockey"
        android:scaleType="fitXY"
        android:alpha="0.1"/>

    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latvia"
                android:layout_marginTop="16dp"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:src="@drawable/latvia_shirt_burned"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="45sp"
                android:id="@+id/score_team_Latvia"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#1a237e"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/germany"
                android:layout_marginTop="16dp"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:src="@drawable/germany_shirt_burned"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="45sp"
                android:id="@+id/score_team_Germany"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/first_layout"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:id="@+id/pm_team_Latvia"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/total_penalty_minutes" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:id="@+id/pm_team_Germany"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/second_layout"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:id="@+id/gws_team_Latvia"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/game_winning_shots" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="0"
            android:id="@+id/gws_team_Germany"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1a237e"
        android:layout_below="@id/third_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/horizontal_view"/>

    <LinearLayout
        android:id="@+id/forth_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/horizontal_view"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalLatvia"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="scoreTeamLatvia"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gwsLatvia"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="gwsTeamLatvia"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penalty_minutes_Latvia"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:layout_marginLeft="16dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="twoPmTeamLatvia"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:layout_marginLeft="2dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="fivePmTeamLatvia"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="16dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="tenPmTeamLatvia"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#1a237e"
            android:layout_marginTop="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalGermany"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="scoreTeamGermany"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gwsGermany"
                android:layout_marginTop="8dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="gwsTeamGermany"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/penalty_minutes_Germany"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2"
                    android:layout_marginLeft="16dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="twoPmTeamGermany"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="5"
                    android:layout_marginLeft="2dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="fivePmTeamGermany"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="10"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="16dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:onClick="tenPmTeamGermany"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:onClick="reset"/>

</RelativeLayout>